<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="contact">Contact</string>
    <string name="info">Info</string>
    <string name="contribution">Contribution</string>
    <string name="feedback">Feedback</string>
    <string name="homepage">Homepage</string>
    <string name="about_description">Android implementation of the KeePass password manager.</string>
    <string name="accept">Accept</string>
    <string name="add_entry">Add entry</string>
    <string name="edit_entry">Edit entry</string>
    <string name="add_group">Add group</string>
    <string name="master_key">Master key</string>
    <string name="security">Security</string>
    <string name="encryption">Encryption</string>
    <string name="encryption_algorithm">Encryption algorithm</string>
    <string name="key_derivation_function">Key derivation function</string>
    <string name="app_timeout">Timeout</string>
    <string name="app_timeout_summary">Idle time before locking the database</string>
    <string name="application">App</string>
    <string name="brackets">Brackets</string>
    <string name="extended_ASCII">Extended ASCII</string>
    <string name="file_manager_install_description">A file manager that accepts the ACTION_CREATE_DOCUMENT and ACTION_OPEN_DOCUMENT intent action is required to create, open, and save database files.</string>
    <string name="allow">Allow</string>
    <string name="clipboard_cleared">Clipboard cleared</string>
    <string name="clipboard_error_title">Clipboard error</string>
    <string name="clipboard_error">Some devices won\'t let apps use the clipboard.</string>
    <string name="clipboard_error_clear">Could not clear clipboard</string>
    <string name="clipboard_timeout">Clipboard timeout</string>
    <string name="clipboard_timeout_summary">Duration of storage in the clipboard (if supported by your device)</string>
    <string name="clipboard_otp_notifications_title">OTP notification</string>
    <string name="clipboard_otp_notifications_summary">Open a notification to copy the OTP from entries populated with autofill or magikeyboard</string>
    <string name="content_description_background">Background</string>
    <string name="content_description_open_file">Open file</string>
    <string name="content_description_node_children">Node children</string>
    <string name="content_description_add_node">Add node</string>
    <string name="content_description_add_entry">Add entry</string>
    <string name="content_description_add_group">Add group</string>
    <string name="content_description_add_item">Add item</string>
    <string name="content_description_file_information">File info</string>
    <string name="content_description_credentials_information">Credentials info</string>
    <string name="content_description_otp_information">One-time password info</string>
    <string name="content_description_password_checkbox">Password checkbox</string>
    <string name="content_description_keyfile_checkbox">Keyfile checkbox</string>
    <string name="content_description_hardware_key_checkbox">Hardware key checkbox</string>
    <string name="content_description_repeat_toggle_password_visibility">Repeat toggle password visibility</string>
    <string name="content_description_entry_icon">Entry icon</string>
    <string name="content_description_database_color">Database color</string>
    <string name="content_description_entry_foreground_color">Entry foreground color</string>
    <string name="content_description_entry_background_color">Entry background color</string>
    <string name="content_description_nav_header">Navigation header</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="validate">Validate</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="entry_password_generator">Password generator</string>
    <string name="content_description_password_length">Password length</string>
    <string name="content_description_passphrase_word_count">Passphrase word count</string>
    <string name="entry_add_field">Add field</string>
    <string name="entry_add_attachment">Add attachment</string>
    <string name="content_description_remove_field">Remove field</string>
    <string name="content_description_update_from_list">Update</string>
    <string name="content_description_remove_from_list">Remove</string>
    <string name="content_description_keyboard_close_fields">Close fields</string>
    <string name="content_description_share_url">Share URL</string>
    <string name="select_to_copy">Select to copy %1$s to clipboard</string>
    <string name="retrieving_db_key">Retrieving database key…</string>
    <string name="waiting_challenge_request">Waiting for the challenge request…</string>
    <string name="waiting_challenge_response">Waiting for the challenge response…</string>
    <string name="database">Database</string>
    <string name="template_group_name">Templates</string>
    <string name="decrypting_db">Decrypting database content…</string>
    <string name="default_checkbox">Use as default database</string>
    <string name="digits">Digits</string>
    <string name="html_about_licence">KeePassDX © %1$d Kunzisoft is &lt;strong&gt;open source&lt;/strong&gt; and &lt;strong&gt;without advertising&lt;/strong&gt;.
\nIt is provided as is, under &lt;strong&gt;GPLv3&lt;/strong&gt; license, without any warranty.</string>
    <string name="html_about_privacy">&lt;strong&gt;No user data is retrieved&lt;/strong&gt;, this application does not connect to any server, works only locally and fully respects the privacy of users.</string>
    <string name="html_about_contribution">In order to &lt;strong&gt;keep our freedom&lt;/strong&gt;, &lt;strong&gt;fix bugs&lt;/strong&gt;, &lt;strong&gt;add features&lt;/strong&gt; and &lt;strong&gt;to be always active&lt;/strong&gt;, we count on your &lt;strong&gt;contribution&lt;/strong&gt;.</string>
    <string name="entry_accessed">Accessed</string>
    <string name="entry_cancel">Cancel</string>
    <string name="entry_notes">Notes</string>
    <string name="entry_confpassword">Confirm password</string>
    <string name="entry_created">Created</string>
    <string name="entry_expires">Expires</string>
    <string name="expired">Expired</string>
    <string name="entry_UUID">UUID</string>
    <string name="entry_history">History</string>
    <string name="entry_attachments">Attachments</string>
    <string name="entry_keyfile">Keyfile</string>
    <string name="hardware_key">Hardware key</string>
    <string name="entry_modified">Modified</string>
    <string name="searchable">Searchable</string>
    <string name="inherited">Inherit</string>
    <string name="auto_type">Auto-Type</string>
    <string name="auto_type_sequence">Auto-Type sequence</string>
    <string name="entry_not_found">Could not find entry data.</string>
    <string name="entry_password">Password</string>
    <string name="entry_application_id">App Id</string>
    <string name="tags">Tags</string>
    <string name="custom_data">Custom data</string>
    <string name="save">Save</string>
    <string name="entry_title">Title</string>
    <string name="entry_setup_otp">Set up one-time password</string>
    <string name="otp_type">OTP type</string>
    <string name="otp_secret">Secret</string>
    <string name="otp_period">Period (seconds)</string>
    <string name="otp_counter">Counter</string>
    <string name="otp_digits">Digits</string>
    <string name="search_filters">Search filters</string>
    <string name="otp_algorithm">Algorithm</string>
    <string name="current_group">Current group</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="regex">Regular expression</string>
    <string name="debit_credit_card">Debit / Credit Card</string>
    <string name="holder">Holder</string>
    <string name="number">Number</string>
    <string name="card_verification_value">CVV</string>
    <string name="personal_identification_number">PIN</string>
    <string name="id_card">ID Card</string>
    <string name="name">Name</string>
    <string name="place_of_issue">Place of issue</string>
    <string name="date_of_issue">Date of issue</string>
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="wireless">Wi-Fi</string>
    <string name="ssid">SSID</string>
    <string name="type">Type</string>
    <string name="cryptocurrency">Cryptocurrency wallet</string>
    <string name="token">Token</string>
    <string name="public_key">Public key</string>
    <string name="private_key">Private key</string>
    <string name="seed">Seed</string>
    <string name="account">Account</string>
    <string name="bank">Bank</string>
    <string name="bank_name">Bank name</string>
    <string name="bank_identifier_code">SWIFT / BIC</string>
    <string name="international_bank_account_number">IBAN</string>
    <string name="secure_note">Secure Note</string>
    <string name="membership">Membership</string>
    <string name="generate_password">Generate password</string>
    <string name="hint_conf_pass">Confirm password</string>
    <string name="hint_generated_password">Generated password</string>
    <string name="hint_keyfile">Keyfile</string>
    <string name="hint_length">Length</string>
    <string name="hint_pass">Password</string>
    <string name="length">Length</string>
    <string name="lowercase">Lower-case</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_move">Move</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_open">Open</string>
    <string name="menu_external_icon">External icon</string>
    <string name="minus">Minus</string>
    <string name="space">Space</string>
    <string name="sort_ascending">Lowest first ↓</string>
    <string name="sort_groups_before">Groups before</string>
    <string name="sort_recycle_bin_bottom">Recycle bin at the bottom</string>
    <string name="sort_db">Natural order</string>
    <string name="sort_title">Title</string>
    <string name="sort_username">Username</string>
    <string name="sort_creation_time">Creation</string>
    <string name="sort_last_modify_time">Modification</string>
    <string name="sort_last_access_time">Access</string>
    <string name="special">Special</string>
    <string name="underline">Underline</string>
    <string name="uppercase">Upper-case</string>
    <string name="general">General</string>
    <string name="passkeys_close_database_title">Close database</string>
    <string name="passkeys_close_database_summary">Close the database after a passkey selection</string>
    <string name="passkeys_privileged_apps_title">Privileged apps</string>
    <string name="passkeys_privileged_apps_summary">Manage browsers in the custom list of privileged apps</string>
    <string name="passkeys_auto_select_title">Auto select</string>
    <string name="passkeys_auto_select_summary">Auto select if only one entry and the database is open, only if the requesting app is compatible</string>
    <string name="passkeys_backup_eligibility_title">Backup Eligibility</string>
    <string name="passkeys_backup_eligibility_summary">Determine at creation time whether the public key credential source is allowed to be backed up</string>
    <string name="passkeys_backup_state_title">Backup State</string>
    <string name="passkeys_backup_state_summary">Indicate that credentials are backed up and protected against the loss of a single device</string>
    <string name="back_to_previous_keyboard">Back to previous keyboard</string>
    <string name="select_entry">Select entry</string>
    <string name="backspace">Backspace</string>
    <string name="enter">Enter</string>
</resources>