<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2020 Jeremy Jamet / Kunzisoft.

 This file is part of KeePassDX.

  KeePassDX is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  KeePassDX is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePassDX.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/general">
        <SwitchPreferenceCompat
            android:key="@string/passkeys_close_database_key"
            android:title="@string/passkeys_close_database_title"
            android:summary="@string/passkeys_close_database_summary"
            android:defaultValue="@bool/passkeys_close_database_default"/>
        <com.kunzisoft.keepass.settings.preference.DialogListExplanationPreference
            android:key="@string/passkeys_privileged_apps_key"
            android:title="@string/passkeys_privileged_apps_title"
            android:summary="@string/passkeys_privileged_apps_summary"/>
        <SwitchPreferenceCompat
            android:key="@string/passkeys_auto_select_key"
            android:title="@string/passkeys_auto_select_title"
            android:summary="@string/passkeys_auto_select_summary"
            android:defaultValue="@bool/passkeys_auto_select_default"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/database">
        <SwitchPreferenceCompat
            android:key="@string/passkeys_backup_eligibility_key"
            android:title="@string/passkeys_backup_eligibility_title"
            android:summary="@string/passkeys_backup_eligibility_summary"
            android:defaultValue="@bool/passkeys_backup_eligibility_default"/>
        <SwitchPreferenceCompat
            android:key="@string/passkeys_backup_state_key"
            android:dependency="@string/passkeys_backup_eligibility_key"
            android:title="@string/passkeys_backup_state_title"
            android:summary="@string/passkeys_backup_state_summary"
            android:defaultValue="@bool/passkeys_backup_state_default"/>
    </PreferenceCategory>
    <!--
    // TODO Passkeys default group #2123
    <PreferenceCategory
        android:title="@string/save">
        <SwitchPreferenceCompat
            android:key="@string/passkeys_default_group_creation_key"
            android:persistent="false"
            android:title="@string/passkeys_default_group_creation_title"
            android:summary="@string/passkeys_default_group_creation_summary"
            android:enabled="false"/>
        <com.kunzisoft.keepass.settings.preference.DialogListExplanationPreference
            android:key="@string/passkeys_group_creation_key"
            android:persistent="false"
            android:title="@string/passkeys_default_group_creation_title"
            android:enabled="false"/>
    </PreferenceCategory>
    -->
</PreferenceScreen>