<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2018 Jeremy Jamet / Kunzisoft.

 This file is part of KeePassDX.

  KeePassDX is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  KeePassDX is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePassDX.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_copy"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:title="@string/menu_copy"
        android:orderInCategory="1040"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_move"
        android:icon="@drawable/ic_content_cut_white_24dp"
        android:title="@string/menu_move"
        android:orderInCategory="1030"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_delete"
        android:icon="@drawable/ic_content_delete_white_24dp"
        android:title="@string/menu_delete"
        android:orderInCategory="1050"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_open"
        android:icon="@drawable/ic_launch_white_24dp"
        android:title="@string/menu_open"
        android:orderInCategory="1060"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/menu_edit"
        android:orderInCategory="1070"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />
</menu>
