<!--
 Copyright 2018 Jeremy Jamet / Kunzisoft.

 This file is part of KeePassDX.

  KeePassDX is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  KeePassDX is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePassDX.  If not, see <http://www.gnu.org/licenses/>.
-->
<Keyboard
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="o"
    android:verticalGap="8dp"
    android:horizontalGap="1%p"
    android:keyHeight="38dp">
    <Row
        android:rowEdgeFlags="bottom">
        <Key
            android:codes="600"
            android:keyIcon="@drawable/ic_keyboard_white_24dp"
            android:tooltipText="@string/back_to_previous_keyboard"
            android:keyWidth="17%p"
            android:horizontalGap="1%p"
            android:keyEdgeFlags="left"
            android:isRepeatable="false" />
        <Key
            android:codes="620"
            android:keyIcon="@drawable/ic_key_white_24dp"
            android:tooltipText="@string/select_entry"
            android:keyWidth="45%p"
            android:horizontalGap="2%p"
            android:isRepeatable="false"/>
        <Key
            android:codes="-5"
            android:keyIcon="@drawable/ic_backspace_white_24dp"
            android:tooltipText="@string/backspace"
            android:keyWidth="14%p"
            android:horizontalGap="2%p"
            android:isRepeatable="true"/>
        <Key
            android:codes="-4"
            android:keyIcon="@drawable/ic_keyboard_return_white_24dp"
            android:tooltipText="@string/enter"
            android:keyWidth="17%p"
            android:horizontalGap="1%p"
            android:isRepeatable="false"
            android:keyEdgeFlags="right"/>
    </Row>
</Keyboard>