<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2021 Jeremy Jamet / Kunzisoft.
     
 This file is part of KeePassDX.

  KeePassDX is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  KeePassDX is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePassDX.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/menu_edit"
        android:orderInCategory="5"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:title="@string/menu_delete"
        android:orderInCategory="10"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_external_icon"
        android:icon="@drawable/ic_open_browser_white_24dp"
        android:title="@string/menu_external_icon"
        android:orderInCategory="15"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />
</menu>
