<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2017 Brian Pellin, Jeremy Jamet / Kunzisoft.
     
 This file is part of KeePass DX.

  KeePass DX is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  KeePass DX is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePass DX.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:padding="@dimen/default_margin"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<EditText android:id="@+id/pass_password" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:maxLines="1"
		android:hint="@string/hint_pass"/>
	<EditText android:id="@+id/pass_conf_password" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/pass_password"
		android:inputType="textPassword"
		android:maxLines="1"
		android:hint="@string/hint_conf_pass"/>
	<EditText android:id="@+id/pass_keyfile" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/pass_conf_password"
		android:maxLines="1"
		android:hint="@string/hint_keyfile"/>
</RelativeLayout>
